TestRepo2/src/objects/SurveyLayout_Brand_Items__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Survey Distribution / Shelf / Display</relationshipLabel>
        <relationshipName>SurveyLayout_Brand_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Checkbox_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Checkbox Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Layout</label>
        <referenceTo>Survey_Layout__c</referenceTo>
        <relationshipName>SurveyLayout_Brand_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Distribution / Shelf / Display</label>
    <nameField>
        <displayFormat>SLBIN-{00000}</displayFormat>
        <label>SurveyLayout Brand Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Distribution / Shelf / Display</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>